@@ -6,107 +6,120 @@
   -->
 <config addfieldpath="/administrator/components/com_loginguard/Field/Joomla">
 
-	<fieldset name="captive" label="COM_LOGINGUARD_CONFIG_HEADER_CAPTIVE_LABEL"
-			  description="COM_LOGINGUARD_CONFIG_HEADER_CAPTIVE_DESC">
+    <fieldset name="captive"
+              label="COM_LOGINGUARD_CONFIG_HEADER_CAPTIVE_LABEL"
+              description="COM_LOGINGUARD_CONFIG_HEADER_CAPTIVE_DESC">
 
-		<field name="allowed_positions_frontend" type="modulepositions" default="" size="7"
-			   label="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_FRONTEND_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_FRONTEND_DESC"
-			   client_id="0"
-			   multiple="1"
-			   class="input-large"/>
+        <field name="allowed_positions_frontend"
+               type="modulepositions"
+               default=""
+               size="7"
+               label="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_FRONTEND_LABEL"
+               description="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_FRONTEND_DESC"
+               client_id="0"
+               multiple="1"
+               class="input-large"/>
 
-		<field name="frontend_show_title" type="radio"
-			   default="1"
-			   label="COM_LOGINGUARD_CONFIG_FRONTEND_SHOW_TITLE_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_FRONTEND_SHOW_TITLE_DESC"
-			   class="btn-group">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
-		</field>
+        <field name="frontend_show_title"
+               type="fancyradio"
+               default="1"
+               label="COM_LOGINGUARD_CONFIG_FRONTEND_SHOW_TITLE_LABEL"
+               description="COM_LOGINGUARD_CONFIG_FRONTEND_SHOW_TITLE_DESC"
+               class="btn-group">
+            <option value="0">JNo</option>
+            <option value="1">JYes</option>
+        </field>
 
-		<field name="allowed_positions_backend" type="modulepositions" default="" size="7"
-			   label="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_BACKEND_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_BACKEND_DESC"
-			   client_id="1"
-			   multiple="1"
-			   class="input-large"/>
+        <field name="allowed_positions_backend"
+               type="modulepositions"
+               default=""
+               size="7"
+               label="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_BACKEND_LABEL"
+               description="COM_LOGINGUARD_CONFIG_ALLOWED_POSITIONS_BACKEND_DESC"
+               client_id="1"
+               multiple="1"
+               class="input-large"/>
 
-		<field name="neverTSVUserGroups" type="UserGroupList"
-			   checksuperusergroup="1"
-			   default=""
-			   multiple="1"
-			   label="COM_LOGINGUARD_CONFIG_NEVERTSVUSERGROUPS_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_NEVERTSVUSERGROUPS_DESC"
-		>
-			<option value="0">COM_LOGINGUARD_CONFIG_LBL_NOGROUP</option>
-		</field>
+        <field name="neverTSVUserGroups"
+               type="UserGroupList"
+               checksuperusergroup="1"
+               default=""
+               multiple="1"
+               label="COM_LOGINGUARD_CONFIG_NEVERTSVUSERGROUPS_LABEL"
+               description="COM_LOGINGUARD_CONFIG_NEVERTSVUSERGROUPS_DESC"
+        >
+            <option value="0">COM_LOGINGUARD_CONFIG_LBL_NOGROUP</option>
+        </field>
 
-		<field name="forceTSVUserGroups" type="UserGroupList"
-			   checksuperusergroup="1"
-			   default=""
-			   multiple="1"
-			   label="COM_LOGINGUARD_CONFIG_FORCETSVUSERGROUPS_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_FORCETSVUSERGROUPS_DESC"
-		>
-			<option value="0">COM_LOGINGUARD_CONFIG_LBL_NOGROUP</option>
-		</field>
+        <field name="forceTSVUserGroups"
+               type="UserGroupList"
+               checksuperusergroup="1"
+               default=""
+               multiple="1"
+               label="COM_LOGINGUARD_CONFIG_FORCETSVUSERGROUPS_LABEL"
+               description="COM_LOGINGUARD_CONFIG_FORCETSVUSERGROUPS_DESC"
+        >
+            <option value="0">COM_LOGINGUARD_CONFIG_LBL_NOGROUP</option>
+        </field>
 
-		<field name="allow_rememberme" type="radio"
-			   default="1"
-			   label="COM_LOGINGUARD_CONFIG_FRONTEND_ALLOW_REMEMBERME_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_FRONTEND_ALLOW_REMEMBERME_DESC"
-			   class="btn-group">
-			<option value="0">JNo</option>
-			<option value="1">JYes</option>
-		</field>
+        <field name="allow_rememberme"
+               type="fancyradio"
+               default="1"
+               label="COM_LOGINGUARD_CONFIG_FRONTEND_ALLOW_REMEMBERME_LABEL"
+               description="COM_LOGINGUARD_CONFIG_FRONTEND_ALLOW_REMEMBERME_DESC"
+               class="btn-group">
+            <option value="0">JNo</option>
+            <option value="1">JYes</option>
+        </field>
 
-		<field
-				name="cookie_lifetime"
-				type="number"
-				label="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_LIFETIME_LABEL"
-				description="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_LIFETIME_DESC"
-				min="1"
-				max="365"
-				step="1"
-				default="15"
-		/>
+        <field
+                name="cookie_lifetime"
+                type="number"
+                label="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_LIFETIME_LABEL"
+                description="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_LIFETIME_DESC"
+                min="1"
+                max="365"
+                step="1"
+                default="15"
+        />
 
-		<field
-				name="cookie_key_length"
-				type="number"
-				label="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_KEY_LENGTH_LABEL"
-				description="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_KEY_LENGTH_DESC"
-				min="16"
-				max="120"
-				step="1"
-				default="64"
-		/>
+        <field
+                name="cookie_key_length"
+                type="number"
+                label="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_KEY_LENGTH_LABEL"
+                description="COM_LOGINGUARD_CONFIG_FRONTEND_COOKIE_KEY_LENGTH_DESC"
+                min="16"
+                max="120"
+                step="1"
+                default="64"
+        />
 
-		<field name="dark_mode" type="radio" default="0"
-			   label="COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_LABEL"
-			   description="COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_DESC"
-			   class="switcher btn-group">
-			<option value="-1">COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_AUTO</option>
-			<option value="0">COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_NEVER</option>
-			<option value="1">COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
-		</field>
+        <field name="dark_mode"
+               type="list"
+               default="0"
+               label="COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_LABEL"
+               description="COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_DESC"
+        >
+            <option value="-1">COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_AUTO</option>
+            <option value="0">COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_NEVER</option>
+            <option value="1">COM_LOGINGUARD_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
+        </field>
 
-	</fieldset>
+    </fieldset>
 
-	<fieldset
-			name="permissions"
-			label="JCONFIG_PERMISSIONS_LABEL"
-			description="JCONFIG_PERMISSIONS_DESC"
-	>
+    <fieldset
+            name="permissions"
+            label="JCONFIG_PERMISSIONS_LABEL"
+            description="JCONFIG_PERMISSIONS_DESC"
+    >
 
-		<field
-				name="rules"
-				type="rules"
-				label="JCONFIG_PERMISSIONS_LABEL"
-				class="inputbox"
-				filter="rules"
-				component="com_loginguard"
-				section="component"/>
-	</fieldset>
+        <field
+                name="rules"
+                type="rules"
+                label="JCONFIG_PERMISSIONS_LABEL"
+                class="inputbox"
+                filter="rules"
+                component="com_loginguard"
+                section="component"/>
+    </fieldset>
 </config>
